# socketapi

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  publish.yml  tests.yml
Development/changelog/: index.html
Development/contributing/: index.html
Development/license/: index.html
Development/roadmap/: index.html
Usage/actions/: index.html
Usage/channels/: index.html
Usage/dependencies/: index.html
Usage/routers/: index.html
Usage/testing/: index.html
assets/: logo.xcf
docs/: .pages  index.md
docs/Usage/: .pages  actions.md  channels.md  dependencies.md  fastapi-integration.md  routers.md  testing.md
search/: search_index.json
src/socketapi/: __init__.py  annotations.py  applications.py  exceptions.py  handlers.py  main.py  manager.py  router.py  validation.py
tests/: test_actions.py  test_bad_message.py  test_broadcast_messages_from_outside_server.py  test_dependencies.py  test_disconnect.py  test_router.py  test_send_json_error.py  test_subscribe.py  test_subscriptions.py  test_unsubscribe.py  test_validation.py  test_x.py
